--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Web site created using create-react-app"/>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Teko:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/f13ffa2c90.js" crossorigin="anonymous"></script>
 
     <title>SpaceX</title>
 </head>
